--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,5 +7,9 @@ find_package(PkgConfig REQUIRED)
 pkg_check_modules(GTK4 REQUIRED IMPORTED_TARGET gtk4)
 
 add_executable(${PROJECT_NAME} src/main.c
+        src/gmeme-image.c
+        src/gmeme-image.h
+        src/gmeme-paintable.c
+        src/gmeme-paintable.h
 )
 target_link_libraries(${PROJECT_NAME} PRIVATE PkgConfig::GTK4)
