rework project structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,5 +9,7 @@ pkg_check_modules(GTK4 REQUIRED IMPORTED_TARGET gtk4)
 add_executable(${PROJECT_NAME} src/main.c
         src/gmeme-paintable.c
         src/gmeme-paintable.h
+        src/gui.c
+        src/gui.h
 )
 target_link_libraries(${PROJECT_NAME} PRIVATE PkgConfig::GTK4)
